# HW3D-Triangles

./: .gitignore  CMakeLists.txt  README.md  intersect.cpp  intersect.hpp  main.cpp  triangles_variatons.md
geometry/: algorithm.cpp  algorithm.hpp  geometry.cpp  geometry.hpp  geometry2D.cpp  geometry2D.hpp  geometry3D.cpp  geometry3D.hpp
intersection/: degenerate.cpp  degenerate.hpp  intersect.cpp  intersect.hpp
tests/: deg_tests.cpp  geo2D_tests.cpp  geo3D_tests.cpp  geo_tests.cpp  isect_tests.cpp  triangles.txt  tritri_tests.cpp
